@@ -6,12 +6,32 @@
 #include <iostream>
 namespace Pds {
 namespace Alias {
-ConfigV1::ConfigV1(uint32_t arg__numSrcAlias, const Pds::SrcAlias* arg__srcAlias)
+SrcAlias::SrcAlias(const Pds::Src& arg__src, const char* arg__aliasName)
+    : _src(arg__src), _pad1(0)
+{
+  if (arg__aliasName) std::copy(arg__aliasName, arg__aliasName+(31), &_aliasName[0]);
+}
+uint8_t
+SrcAlias::operator <(const Alias::SrcAlias& other) const {
+  return (strcmp(this->_aliasName,other._aliasName)<0);
+}
+uint8_t
+SrcAlias::operator ==(const Alias::SrcAlias& other) const {
+  return (strcmp(this->_aliasName,other._aliasName)==0);
+}
+std::vector<int>
+SrcAlias::aliasName_shape() const {
+  std::vector<int> shape;
+  shape.reserve(1);
+  shape.push_back(AliasNameMax);
+  return shape;
+}
+ConfigV1::ConfigV1(uint32_t arg__numSrcAlias, const Alias::SrcAlias* arg__srcAlias)
     : _numSrcAlias(arg__numSrcAlias)
 {
   if (arg__srcAlias and (this->numSrcAlias())) {
     ptrdiff_t offset = 4;
-    Pds::SrcAlias* data = reinterpret_cast<Pds::SrcAlias*>(((char*)this)+offset);
+    Alias::SrcAlias* data = reinterpret_cast<Alias::SrcAlias*>(((char*)this)+offset);
     std::copy(arg__srcAlias, arg__srcAlias+(this->numSrcAlias()), data);
   }
 }
