@@ -3,7 +3,6 @@ libsrcs_xtcdata := src/TypeId.cc \
                    src/BldInfo.cc \
                    src/XtcIterator.cc \
                    src/Src.cc \
-                   src/SrcAlias.cc \
                    src/TransitionId.cc \
                    src/XtcFileIterator.cc \
                    src/ClockTime.cc \
@@ -13,3 +12,5 @@ libsrcs_xtcdata := src/TypeId.cc \
                    src/Level.cc \
                    src/ProcInfo.cc \
                    src/DetInfo.cc
+
+#                   src/SrcAlias.cc \
