@@ -1,3 +1,4 @@
+2013-Sep-18 weaver	Tag V07-00-02.  Derived from psddldata tag V00-04-35.  Moved xtc/SrcAlias to psddl/alias.ddl.h.
 2013-Sep-16 weaver	Tag V07-00-01.  Derived from psddldata tag V00-04-33.
 2012-Dec-21 caf         Added Timepix Config V3.
 2012-Apr-03 tomytsai    Added Ocean Optics spectrometer and EpicsConfig
